--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1 class="text-hero-main text-paragraph" id="textWrite"></h1>
                 <h1 class="text-hero-main text-hero">Jere Tolonen</h1>
                 <h1 class="text-hero-highlight text-hero">Ohjelmistokehittäjä</h1>
-                <p class="text-secondary m-bl-25">Olen 17 Ohjelmistokeihttäjä Opiskelija Savon Ammattiopistosta. Osaan mm. PHP, JS, CSS ja C# kielet</p>
+                <p class="text-secondary m-bl-25">Olen 17 Ohjelmistokeihttäjä Opiskelija Savon Ammattiopistosta. Osaan mm. PHP, JS, CSS ja C# kielet. Vapaa-ajallani Suunnittelen ja Toteutan Omia Projekteja Kuten Sovelluksia, Nettisivuja ja Pelejä</p>
             </div>
             <div class="col m-bl-100 col-cent" id="secondaryCont">
                 
