made update. Hopefully i use this for a while

--- a/overview.html
+++ b/overview.html
@@ -41,114 +41,132 @@
     <div class="row jcc">
         <div class="max1600 row jcsb margin-1">
             <div class="h800p col jcc">
-                <h1 class="hero-header">Jere Tolonen</h1>
-                <p class="hero-paragraph">>> Software Developer, Programmer</p>
-                <p class="hero-paragraph">With experience in 3D Creation, UI designing and photographing</p>
+                <h1 class="hero-header">Examples</h1>
                 <br>
                 <div class="row g25">
-                    <a href="#contact" class="main-btn fs24">Contact</a>
-                    <a href="#info" class="secondary-btn fs24">About Me</a>
+                    <a href="index.html#" class="main-btn fs24">To Frontpage</a>
+                    <a href="projects.html#" class="secondary-btn fs24">My Projects</a>
                 </div>
             </div>
         </div>
     </div>
-
-    <br id="info"><br>
-    <div class="row jcc">
-        <div class="max1600 row jcsb g50 general-padding">
-            <div class="m-h350p col container w100 h100 jcsb general-padding">
-                <div class="col">
-                    <h1>About Me</h1>
-                    <div class="row w100 jcsb mob-view-1 g15">
-                        <div class="col w100">
-                            <br>
-                            <h2>Hello</h2>
-                            <p class="fs24">
-                                I am 17-year old Software developer Student from Kuopio, Finland.
-                                I am active and have been doing well in Coding, 3D Asset Creation and Photographing. 
-                                Also i have experience in plenty of other subjects like graphical designing
-                                <br><br>
-                            </p>
-                        </div>
-                        <div class="col w100">
-                            <h2>+</h2>
-                            <p class="fs24">
-                                Stuff i like doing in my free time is just simply planning things for my projects
-                                <br><br>
-                                By now i have around 5 years of experience in 3D stuff and closer to 4 years in coding
-                            </p>
-                            <br>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <a href="aboutme.html" class="main-btn fs24 w100">Read More</a>
-                </div>
-            </div>
+    <div class="row jcc top-gray">
+        <div class="max1600 row g15 general-padding mob-view-2">
+            <a href="overview.html#programming" class="main-btn fs24">Programming</a>
+            <a href="overview.html#cgi" class="main-btn fs24">CGI / 3D</a>
+            <a href="overview.html#designing" class="main-btn fs24">UI / Graphics Design</a>
         </div>
     </div>
-    <br id="abt"><br>
+    <div class="top-gray"></div>
+    <br id="programming"><br>
     <div class="row jcc">
-        <div class="max1600 row jcsb g25 general-padding">
+        <div class="max1600 row jcsb 25 general-padding">
             <h1>
-                My Skills
+                Programming
             </h1>
-            <a href="overview.html" class="main-btn fs24">Examples</a>
+            <a href="overview.html" class="main-btn fs24">More</a>
         </div>
     </div>
     <br>
     <div class="row jcc">
         <div class="max1600 row jcsb g50 mob-view-1 general-padding">
-            <div class="h600p col container w100 h100 jcsb aic click-hover" onclick="window.location.href='overview.html#programming'">
-                <h1>Programming</h1>
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>p1</h1>
                 <div class="img-wrapper">
                     <img src="assets/images/programming.webp" class="img-showcase">
                 </div>
             </div>
-            <div class="h600p col container w100 h100 jcsb aic click-hover" onclick="window.location.href='overview.html#threed'">
-                <h1>CGI / 3D</h1>
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
                 <div class="img-wrapper">
                     <img src="assets/images/placeholder.webp" class="img-showcase">
                 </div>
             </div>
-            <div class="h600p col container w100 h100 jcsb aic click-hover" onclick="window.location.href='overview.html#designing'">
-                <h1>UI / Graphics Design</h1>
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
                 <div class="img-wrapper">
                     <img src="assets/images/placeholder.webp" class="img-showcase">
                 </div>
             </div>
         </div>
     </div>
-    <br id="contact"><br>
+    <br id="cgi"><br>
     <div class="row jcc">
-        <div class="max1600 row jcsb g50 general-padding">
-            <div class="m-h300p col container w100 h100 jcsb general-padding">
-                <div class="col">
-                    <h1>Contact Me!</h1>
-                    <div class="row w100 jcsb mob-view-1 g15">
-                        <div class="col w100">
-                            <br>
-                            <p class="fs32">
-                                Contact me for any reason - about me or your possible project to work with
-                            </p>
-                        </div>
-                        <div class="col w100">
-                            <h2>Contact List</h2>
-                            <br>
-                            <p class="fs24">
-                                <a href="mailto:tolonenjere0@gmail.com" class="nav-link asc top-gray fs32"><img src="assets/icons/contact32.png" alt="Email" class="h32p w32p ico-invert">Email</a>
-                                <a href="tel:+358401687440" class="nav-link asc top-gray fs32"><img src="assets/icons/earth32.png" alt="Phone" class="h32p w32p ico-invert">Phone</a>
-                                <a href="https://github.com/VisualPlate" class="nav-link asc top-gray fs32"><img src="assets/icons/brands-github.svg" alt="GitHub" class="h32p w32p ico-invert">GitHub</a>
-                                <a href="https://www.linkedin.com/in/jere-tolonen/" class="nav-link asc top-gray fs32"><img src="assets/icons/brands-linkedin-in.svg" alt="LinkedIn" class="h32p w32p ico-invert">LinkedIn</a>
-                                <br><br>
-                            </p>
-                        </div>
-                    </div>
+        <div class="max1600 row jcsb g25 general-padding">
+            <h1>
+                CGI / 3D 
+            </h1>
+            <a href="overview.html" class="main-btn fs24">More</a>
+        </div>
+    </div>
+    <br>
+    <div class="row jcc">
+        <div class="max1600 row jcsb g50 mob-view-1 general-padding">
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
+                <div class="img-wrapper">
+                    <img src="assets/images/placeholder.webp" class="img-showcase">
+                </div>
+            </div>
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
+                <div class="img-wrapper">
+                    <img src="assets/images/placeholder.webp" class="img-showcase">
+                </div>
+            </div>
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
+                <div class="img-wrapper">
+                    <img src="assets/images/placeholder.webp" class="img-showcase">
                 </div>
             </div>
         </div>
     </div>
     <br><br>
+    <br id="designing"><br>
+    <div class="row jcc">
+        <div class="max1600 row jcsb g25 general-padding">
+            <h1>
+                UI / Graphics<span class="tab-hide"> Design</span> 
+            </h1>
+            <a href="overview.html" class="main-btn fs24">More</a>
+        </div>
+    </div>
+    <br>
+    <div class="row jcc">
+        <div class="max1600 row jcsb g50 mob-view-1 general-padding">
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
+                <div class="img-wrapper">
+                    <img src="assets/images/placeholder.webp" class="img-showcase">
+                </div>
+            </div>
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
+                <div class="img-wrapper">
+                    <img src="assets/images/placeholder.webp" class="img-showcase">
+                </div>
+            </div>
+            <div class="h600p col container w100 h100 jcsb aic click-hover">
+                <h1>Coming soon</h1>
+                <div class="img-wrapper">
+                    <img src="assets/images/placeholder.webp" class="img-showcase">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <br id="designing"><br>
+    <div class="row jcc">
+        <div class="max1600 row jcsb g25 general-padding">
+            <a href="projects.html" class="main-btn fs24 w100">
+                <h3>
+                    My Projects
+                </h3>
+            </a>
+        </div>
+    </div>
+    <br>
     <div class="row jcc top-gray">
         <div class="max1600 col jcsb general-padding">
             <div class="row jcsb mob-view-2">
