--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
                     <div>
                         <h1 class="fs42">Basketball</h1>
                         <p class="fs32">
-                            High quality, render ready basketball model, with accurate sizing and textures. Modelled, textured and rendered within two hours
+                            High quality, render ready basketball 3D-model, with accurate sizing and textures. Modelled, textured and rendered within two hours
                         </p>
                         <br>
                     </div>
